--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <input type="email" id="email" name="email" placeholder="Enter your email..." required>
                 <label for="subject">Subject:</label>
                 <textarea name="subject" id="subject" cols="10" rows="10" required></textarea>
-                <input type="submit" value="submit">
+                <input type="submit" value="send message">
             </form>
         </div>
     </section>
