--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
     <section class="about" id="about">
         <div class="container">
-            <div class="profile-img" data-aos='fade-right' data-aos-delay="300">
+            <div class="profile-img" data-aos='flip-up' data-aos-delay="300">
                 <img class="profile-oda-img" src="images/profile.jpeg" alt="">
             </div>
             <div class="about-details" data-aos='fade-left' data-aos-delay="600">
@@ -104,7 +104,7 @@
                         language with dynamic semantics. Designed by: Guido van Rossum
                     </p>
                 </div>
-                <div class="skill" data-aos='fade-in' data-aos-delay="600">
+                <div class="skill" data-aos='fade-in' data-aos-delay="300">
                     <div class="html-skill">
                         <div class="cont">
                             <div class="icon-container" id="htmlicon">
@@ -121,7 +121,7 @@
                         HTML provides the structure of the page, CSS the layout, for a variety of devices.
                     </p>
                 </div>
-                <div class="skill" data-aos='fade-in' data-aos-delay="800">
+                <div class="skill" data-aos='fade-in' data-aos-delay="300">
                     <div class="icon-container">
                         <i class="fab fa-js-square"></i>
                     </div>
@@ -131,7 +131,7 @@
                         and server-side that allows you to make web pages interactive.
                     </p>
                 </div>
-                <div class="skill" data-aos='fade-in' data-aos-delay="1000">
+                <div class="skill" data-aos='fade-in' data-aos-delay="300">
                     <div class="icon-container">
                         <i class="fab fa-node"></i>
                     </div>
@@ -151,7 +151,7 @@
                         React is a User Interface (UI) library. React is a tool for building UI components.
                     </p>
                 </div>
-                <div class="skill" data-aos='fade-in' data-aos-delay="600">
+                <div class="skill" data-aos='fade-in' data-aos-delay="300">
                     <div class="icon-container">
                         <i class="icon-mongodb"></i>
                     </div>
@@ -174,10 +174,10 @@
                 <h6>view some of my recent work</h6>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos='fade-right' data-aos-delay="300">
+                <div class="portfolio-img has-margin-right" data-aos='zoom-in' data-aos-delay="300">
                     <img src="images/portitem1.png" alt="">
                 </div>
-                <div class="portfolio-description" data-aos='fade-left' data-aos-delay="600">
+                <div class="portfolio-description" data-aos='zoom-in' data-aos-delay="300">
                     <h6>Website developnment</h6>
                     <h1>E-commerce website</h1>
                     <p>
@@ -191,7 +191,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-description has-margin-right" data-aos='fade-right' data-aos-delay="300">
+                <div class="portfolio-description has-margin-right" data-aos='zoom-out' data-aos-delay="300">
                     <h6>python project</h6>
                     <h1>Live cricket score</h1>
                     <p>
@@ -202,14 +202,14 @@
                     <a href="https://github.com/joyjames143/python-cricket-score-live" class="cta">view github code</a>
                 </div>
                 <div class="portfolio-img">
-                    <img src="images/portitem2.png" alt="" data-aos='fade-left' data-aos-delay="600">
+                    <img src="images/portitem2.png" alt="" data-aos='zoom-out' data-aos-delay="300">
                 </div>
             </div>
             <div class="portfolio-item">
-                <div class="portfolio-img has-margin-right" data-aos='fade-right' data-aos-delay="300">
+                <div class="portfolio-img has-margin-right" data-aos='zoom-in' data-aos-delay="300">
                     <img src="images/portitem3.jpeg" alt="">
                 </div>
-                <div class="portfolio-description" data-aos='fade-left' data-aos-delay="600">
+                <div class="portfolio-description" data-aos='zoom-in' data-aos-delay="300">
                     <h6>Website developnment</h6>
                     <h1>website layout</h1>
                     <p>
