contact form try 1

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     living in Tamilnadu. When started learning about web development, I got introduced to node.js, express, react, which I am continuously learning 
                 </br>
                 </br>
-                I'm currently pursuing my Electronics and Communication engineering at St.jJosephs institute of technology
+                I'm currently pursuing my Electronics and Communication engineering at St.Josephs institute of technology
 
     
                 </p>
@@ -256,7 +256,7 @@
                 <h1>Contact</h1>
                 <h6>Lets work together</h6>
             </div>
-            <form action="#" data-aos='fade-up' data-aos-delay="300">
+            <form action="contact.php" data-aos='fade-up' data-aos-delay="300">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" placeholder="Enter your name..." required>
                 <label for="companyname">Company name:</label>
