--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <h1>Contact</h1>
                 <h6>Lets work together</h6>
             </div>
-            <form action="contact.php" data-aos='fade-up' data-aos-delay="300">
+            <form action="POST" data-netlify="true" data-aos='fade-up' data-aos-delay="300">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" placeholder="Enter your name..." required>
                 <label for="companyname">Company name:</label>
