--- a/index.html
+++ b/index.html
@@ -167,6 +167,25 @@
                     <img src="images/portitem2.png" alt="" data-aos='zoom-out' data-aos-delay="300">
                 </div>
             </div>
+            <div class="portfolio-item">
+                <div class="portfolio-img has-margin-right" data-aos='zoom-in' data-aos-delay="300">
+                    <img src="images/portitem3.png" alt="">
+                </div>
+                <div class="portfolio-description" data-aos='zoom-in' data-aos-delay="300">
+                    <h6>Website developnment</h6>
+                    <h1>movie database</h1>
+                    <p>
+                        It is a website where you can search any movie and get their ratings and stuff. 
+                        It fetches the data from 'http://www.omdbapi.com/' and It is built using react
+                        
+                    </p>
+                    <a href="https://joy-moviedb.netlify.app/" class="cta">view Page</a>
+                </br>
+                    <a href="https://github.com/joyjames143/movie-database-using-react" class="cta">view github code</a>
+                </br>
+                    <a href="https://codesandbox.io/s/blue-snowflake-mxjf8" class="cta">sandbox</a>
+                </div>
+            </div>
         </div>
     </section>
 
